Tab List: Fix active tab color on iOS (#1261)

--- a/src/components/ui/Tab.scss
+++ b/src/components/ui/Tab.scss
@@ -19,7 +19,6 @@
   }
 
   &.active {
-    pointer-events: none;
     cursor: default;
     color: var(--color-primary);
 
